<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="18dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_your_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Toppings"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/milk_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/milk"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16dp"/>

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/chocolate"
                android:textSize="16sp"
                android:paddingLeft="24dp"
                android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            />

         <TextView
             android:id="@+id/quantity_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="10dp"
             android:text="0"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            />
     </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/order_summary_text_view"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />

    </LinearLayout>
    </ScrollView>